deployment/collection-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collection-manager-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collection-manager
  template:
    metadata:
      labels:
        app: collection-manager
    spec:
      containers:
        - image: mikethenut/collection-manager:latest
          name: collection-manager
          ports:
            - containerPort: 8081
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: collection-manager
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: server
  selector:
    app: collection-manager
