deployment/consul-dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul-dev-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul-dev
  template:
    metadata:
      labels:
        app: consul-dev
    spec:
      containers:
        - image: consul:latest
          name: consul-dev
          ports:
            - containerPort: 8500
              name: tcpport1
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: consul-dev
spec:
  type: LoadBalancer
  ports:
    - port: 8500
      protocol: TCP
      targetPort: tcpport1
  selector:
    app: consul-dev
