deployment/price-updater-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: price-updater-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-updater
  template:
    metadata:
      labels:
        app: price-updater
    spec:
      containers:
        - image: mikethenut/price-updater:latest
          name: price-updater
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: price-updater
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: price-updater
